[package]
name = "macmon"
version = "0.6.2"
edition = "2024"
description = "Sudoless performance monitoring CLI tool for Apple Silicon processors"
authors = ["vladkens"]
license = "MIT"
repository = "https://github.com/vladkens/macmon"
readme = "readme.md"
keywords = ["macos", "monitoring", "performance", "cli"]
categories = ["command-line-utilities", "hardware-support"]

[lints.rust]
non_camel_case_types = "allow"
unreachable_code = "allow"
unused_assignments = "allow"
unused_imports = "deny"

[lints.clippy]
needless_range_loop = "allow"
single_match = "allow"

[profile.release]
panic = "abort"
strip = false
lto = false

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
core-foundation = "0.10.1"
libc = "0.2.172"
num-traits = "0.2.19"
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.140"
portable-pty = "0.9"
vt100 = "0.15"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
  "NSString", "NSThread", "NSAttributedString",
  "NSDictionary", "NSNotification", "NSGeometry",
] }
objc2-app-kit = { version = "0.3", features = [
  "NSApplication", "NSRunningApplication",
  "NSStatusBar", "NSStatusItem", "NSStatusBarButton",
  "NSControl", "NSButton", "NSResponder", "NSView",
  "NSImage", "NSWindow", "NSColor", "NSFont",
  "NSAttributedString", "NSStringDrawing",
  "NSGraphicsContext", "NSGraphics", "NSBezierPath",
  "NSMenu", "NSMenuItem", "NSScreen", "NSEvent",
] }
block2 = "0.6"
